# ASDA_2025_Group_1_Portfolio_new

./: README.md  finished.xlsx  main.py  my_notebook.py  pyproject.toml
48h exam/: Draft_DL.ipynb  Games_final.xlsx  Report_draft.md  Week_48_H_group_1_notebook.ipynb  game_sales_TD.ipynb  last_week_group_1_TD.ipynb  ranjit.ipynb  vgsales_input_platform_families.csv
additional_material/: Fish_final.xlsx  Lego Database - group 2.csv  Lego Database - group 4.csv  Lego Database - group1.csv  Lego Database - group_3.csv  Lego Database - group_5.csv  housing.final.xlsx  week_10_plot  ~$worldbank_group1.xlsx
backup stuff/: Ranjit_notebook_correlations.ipynb  pearson_corr_matrix.csv  shrayas_file_week_06.ipynb  spearman_corr_matrix.csv  standard_scaler_wine_color.pkl  svm_rbf_wine_color.pkl  week09_model_reduction.ipynb  week_05_prep_world_bank_td.ipynb  week_06_draft_DL.ipynb  week_12_DL_for_report.ipynb  week_12_Ranjit_part.ipynb  worldbank_cleaned.xlsx
datasets/: lego_cleaned.csv  week11_songs.csv  wine_development(in).csv  wine_holdout_X(in).csv  wine_holdout_y(in).csv
docs/: index.html
marimogroup1/: Daniel.py  Daniel4.py  Daniel_Fish.py  Ranjit.py  WASM_OPTIMIERUNG.md  dashboard.html  fish_analysis_ranjit.py  fish_analysis_wasm.py  main.py  marimo_week13_group_1.py  pyproject.toml  train_fish_model.py
marimogroup1/__marimo__/session/: Daniel.py.json  Daniel4.py.json  Daniel_Fish.py.json  Ranjit.py.json  fish_analysis_ranjit.py.json  fish_analysis_wasm.py.json  marimo_week13_group_1.py.json  week_13_group_1_notebook.py.json
notebooks/: Group1_housing.xlsx  (+36 more)
(+14 files in other folders)
