[project]
name = "marimogroup1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo[recommended]>=0.19.4",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
]

[dependency-groups]
dev = [
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.9.0.post1",
]
